# Aegisdesk

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  coverage_report.txt  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  scratch_test_sim.py  test_security.py
.github/workflows/: ci.yml
app/: README.md  main.py
app/api/: README.md  auth.py  endpoints.py  routes.py
app/config/: settings.py
app/db/: vector_store.py
app/memory/: README.md  context_assembler.py  extractor.py  graph_store.py  mcp_server.py
app/models/: schemas.py
app/observability/: tracing.py
app/rag/: README.md  graph.py  ingestion.py  pipeline.py  retriever.py
app/services/: README.md  auth_service.py  chat_service.py  vision_service.py  webhook_service.py
app/utils/: preprocessing.py
docs/: architecture.md  context-map.md  roadmap.md  ssrf_verification.txt
docs/adr/: 0001-cli-first.md  0002-sqlite-plus-chroma.md  0003-agent-first-docs.md
examples/: README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: AskBar.tsx  ConfidencePill.tsx  DotMatrixText.tsx  Header.tsx  PageShell.tsx  (+3 more)
scripts/: tune_router.py
src/aegisdesk/: README.md  __init__.py
tests/: README.md  aegisdesk_batch_table.tex  aegisdesk_benchmark_results.csv  aegisdesk_benchmark_table.tex  aegisdesk_query_results.csv  baseline_benchmark_results.csv  baseline_benchmark_table.tex  benchmark.py  benchmark_data.json  benchmark_setup.py  research_benchmark.py  test_cache.py  test_concurrency.py  test_e2e.py  test_exploits.py  test_llm_factory.py  test_performance.py  test_pipeline.py  test_unit.py
(+40 files in other folders)
