[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisdesk"
version = "0.1.0"
description = "CLI-first enterprise IT helpdesk assistant with RAG, memory, and escalation workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [
  { name = "Sitanshu Kumar" }
]
dependencies = [
  "fastapi>=0.109.2",
  "uvicorn>=0.27.1",
  "pydantic>=2.6.1",
  "langchain>=0.1.5",
  "langchain-openai>=0.0.5",
  "langchain-community>=0.0.17",
  "langchain-groq>=0.0.1",
  "chromadb>=0.4.22",
  "fastembed>=0.2.0",
  "python-dotenv>=1.0.1",
  "pypdf>=4.0.1",
  "httpx>=0.27.0",
  "langchain-text-splitters>=0.0.1",
  "google-generativeai>=0.5.0",
  "Pillow>=10.0.0",
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
  "mcp>=1.0.0",
  "python-multipart>=0.0.9",
  "typer>=0.12.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "cachetools>=5.3.0",
  "scikit-learn>=1.4.0",
  "langchain-chroma>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/sitanshukr08/Aegisdesk"
Repository = "https://github.com/sitanshukr08/Aegisdesk"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0"
]

[project.scripts]
aegisdesk = "aegisdesk.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
